# mbdsp

./: CMakeLists.txt  DcBlocker.hpp  Delay.hpp  DelayLine.hpp  DspUtils.hpp  EnvelopeFollower.hpp  Oversampler.hpp  README.md  SmoothedValue.hpp  Tape.hpp  TapeAttrs.hpp  Utils.hpp  flake.nix
.github/workflows/: cmake.yml
TapeModels/: Echorec.hpp  SpaceEcho.hpp  TapeModel.hpp
TapeModels/IRs/: IR_Echorec_Lofi.hpp  IR_SpaceEcho.hpp
cmake/: mbdspConfig.cmake.in
mbdsp/: AudioProcessor.hpp  Concepts.hpp  EnvelopeFollower.hpp  SmoothedValue.hpp  TapTempo.hpp  Tape.hpp  Utils.hpp
mbdsp/Controls/: Controls.hpp  MultiParameter.hpp  Parameter.hpp
mbdsp/TapeModels/: Echorec.hpp  SpaceEcho.hpp  TapeModel.hpp
mbdsp/TapeModels/IRs/: IR_Echorec_Hifi.hpp
tests/: TestParameter.cpp  tests.cpp
